...
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/annotation_tool_background_color_state"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:icon="@drawable/pen_state_drawable"/>

    <androidx.pdf.ink.view.brush.BrushSizeSelectorView
        android:id="@+id/brush_size_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tool_tray"
        app:layout_constraintEnd_toEndOf="@+id/tool_tray"
        app:layout_constraintStart_toStartOf="@+id/tool_tray"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.pdf.ink.view.colorpalette.ColorPaletteView
        android:id="@+id/color_palette"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tool_tray"
        app:layout_constraintEnd_toEndOf="@id/tool_tray"
...
