...
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <item name="pdf_wet_strokes_view" type="id" />
    <item name="pdf_annotation_view" type="id" />
</resources>
